istioctl/cmd/testdata/authz/converter/policy-clusterRbacConfig-exclusion-service.yaml
apiVersion: "rbac.istio.io/v1alpha1"
kind: ClusterRbacConfig
metadata:
  name: default
spec:
  mode: 'ON_WITH_EXCLUSION'
  exclusion:
    services: ["productpage.default.svc.cluster.local", "unknown.default.svc.cluster.local"]
---
